--- a/chat/chat.conf
+++ b/chat/chat.conf
@@ -9,7 +9,7 @@ server {
         proxy_pass http://web;
     }
 
-    location /public/ {
-        root /home/neu3n0/code/vk-edu/2022-2-VK-EDU-FS-Backend-M-Knyazev/chat;
+    location ~* ^.+\.(jpeg|jpg|gif|png)$ {
+        root /home/neu3n0/code/vk-edu/2022-2-VK-EDU-FS-Backend-M-Knyazev/chat/public;
     }
 }
