--- a/messenger/Dockerfile
+++ b/messenger/Dockerfile
@@ -1,7 +1,9 @@
-FROM python:3.10
-ENV PYTHONUNBUFFEDERD 1
+FROM python:3.8
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 RUN mkdir "/web_django"
 WORKDIR /web_django
-COPY requirements.txt /web_django/
-RUN pip install --upgrade pip && pip install -r requirements.txt
-ADD . /web_django/
+RUN pip install --upgrade pip
+COPY ./requirements.txt /web_django
+RUN pip install -r requirements.txt
+COPY . /web_django/
