--- a/messenger/docker-compose.yaml
+++ b/messenger/docker-compose.yaml
@@ -1,29 +1,18 @@
-version: "2.1"
-services:
-  postgres:
-    image: postgres:14.5
-    environment:
-      POSTGRES_DB: "chat_db"
-      POSTGRES_USER: "chat_user"
-      POSTGRES_PASSWORD: "pass"
-    command:
-      - "postgres"
-      - "-c"
-      - "port=6101"    
-    ports:
-      - "6101:15432"
-    networks:
-        - postgres-network
-  django:
-    depends_on:
-      - postgres
-    build: .
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    ports:
-      - "8000:8000"
-    networks:
-        - postgres-network
+version: '2.1'
 
-networks:
-  postgres-network:
-     driver: bridge
+services:
+  web:
+    build: ./
+    command: python manage.py runserver 0.0.0.0:8000
+    ports:
+      - 8000:8000
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - db
+  db:
+    image: postgres:12.0-alpine
+    environment:
+      - POSTGRES_USER=hello_django
+      - POSTGRES_PASSWORD=hello_django
+      - POSTGRES_DB=hello_django_dev
